--- a/pages/welcome/index.wxml
+++ b/pages/welcome/index.wxml
@@ -1,13 +1,8 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class='container'>
+  <image class='user-avatar' src='/images/1.png'></image>
+  <!--只有text包围的才能长按选中-->
+  <text class='user-name'>hello，七月</text>
+  <navigator url='../../pages/posts/posts' class='moto-container'>
+    <text>开启啥啥啥</text>
+  </navigator>
 </view>
