--- a/pages/welcome/index.wxss
+++ b/pages/welcome/index.wxss
@@ -1,21 +1,29 @@
 /**index.wxss**/
-.userinfo {
+.container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+  background: #08ADF2;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+.user-avatar {
+  width: 200rpx;
+  height: 200rpx;
   border-radius: 50%;
+  overflow: hidden;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.user-name {
+  font-size: 36rpx;
+  font-weight: bold;
+  margin-top: 100rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.moto-container {
+  font-size: 32rpx;
+  margin-top: 200rpx;
+  border: 1rpx solid #000;
+  padding: 20rpx 30rpx;
+  font-weight: 300;
+  border-radius: 10rpx;
 }
