--- a/pages/posts/posts.wxss
+++ b/pages/posts/posts.wxss
@@ -2,7 +2,7 @@ page {
   background: #F8F8F8;
 }
 swiper {
-  height: 400rpx;
+  height: 600rpx;
 }
 .swiper-image {
   width: 100%;
@@ -35,4 +35,42 @@ swiper {
 .list-container>.item>.header text {
   color: #999;
   font-size: 24rpx;
+}
+.list-container>.item .tit {
+  height: 60rpx;
+  line-height: 60rpx;
+  padding: 0 20rpx;
+  font-size: 34rpx;
+  font-weight: bold;
+}
+.list-container>.item .img {
+  width: 100%;
+  margin-top: 20rpx;
+  height: 480rpx;
+}
+.list-container>.item .des {
+  margin-top: 20rpx;
+  font-size: 32rpx;
+  padding: 0 20rpx;
+}
+.list-container>.item .tools {
+  display: flex;
+  align-items: center;
+  height: 60rpx;
+  margin-top: 10rpx; 
+  padding: 0 20rpx;
+  font-size: 28rpx;
+}
+.list-container>.item .tools .ico {
+  margin-right: 40rpx;
+  display: flex;
+  align-items: center;
+}
+.list-container>.item .tools .ico text {
+  color: #666;
+}
+.list-container>.item .tools .ico image {
+  width: 32rpx;
+  height: 32rpx;
+  margin-right: 10rpx;
 }
