--- a/pages/welcome/index.wxss
+++ b/pages/welcome/index.wxss
@@ -20,10 +20,12 @@
   margin-top: 100rpx;
 }
 .moto-container {
-  font-size: 32rpx;
   margin-top: 200rpx;
   border: 1rpx solid #000;
   padding: 20rpx 30rpx;
-  font-weight: 300;
   border-radius: 10rpx;
+}
+.moto-container text {
+  font-size: 32rpx;
+  font-weight: 300;
 }
