--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,24 +1,23 @@
 <!-- 先静态页面，先样式在数据 -->
 <view class='container'>
   <view class='image-box'>
-    <image class='top-big-image' src='/images/post/bl.png'></image>
+    <image class='top-big-image' src='{{detailData.post_img}}'></image>
+    <image class="top-fix-image" src='/images/music/music-start.png'></image>
   </view>
   <view class='u-info-box'>
-    <image class='u-head' src='/images/avatar/1.png'></image>
-    <text class='u-name'>王小心</text>
+    <image class='u-head' src='{{detailData.author_img}}'></image>
+    <text class='u-name'>{{detailData.author}}</text>
     <text class='u-text'>发表于</text>
-    <text>三天前</text>
+    <text>{{detailData.before_today}}</text>
   </view>
   <view class='tit-box'>
-    <text>微信小程序学习作品</text>
+    <text>{{detailData.title}}</text>
   </view>
   <view class='btn-box'>
-    <image src='/images/icon/share.png'></image>
     <image src='/images/icon/collection.png'></image>
+    <image src='/images/icon/share.png'></image>
   </view>
   <view class='content-box'>
-    <text class='content'>
-      啦啦啦啦啦啦啦啦随声附和的方式开会豆腐块的愤怒的合法岁的费口舌纠纷is点附近斯蒂芬机顶盒。
-    </text>
+    <text class='content'>{{detailData.content}}</text>
   </view>
 </view>
