--- a/pages/posts/post-detail/post-detail.wxss
+++ b/pages/posts/post-detail/post-detail.wxss
@@ -2,10 +2,23 @@
   width: 100%;
   position: relative;
 }
+.image-box {
+  position: relative;
+}
 .top-big-image {
   display: block;
   width: 100%;
   height: 460rpx;
+}
+.top-fix-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -55rpx;
+  width: 102rpx;
+  height: 110rpx;
+  margin-top: -51rpx;
+  opacity: 0.6;
 }
 .u-info-box {
   display: flex;
@@ -30,24 +43,40 @@
   height: 60rpx;
   margin-right: 10rpx;
 }
-.tit-box text {
+.tit-box {
   padding: 0 30rpx;
+}
+.tit-box text {
   letter-spacing: 2px;
-  font-size: 36rpx;
+  font-size: 32rpx;
   font-weight: bold;
   color: #4D566D;
-  line-height: 2;
+  line-height: 1.6;
 }
 .btn-box {
   display: flex;
+  flex-direction: row-reverse;
   width: 100%;
-  height: 92rpx;
+  height: 88rpx;
+  padding: 2rpx 0;
   overflow: hidden;
   margin-top: 20rpx;
-  background-image: -webkit-linear-gradient(top,#d9d9d9,#d9d9d9 50%,transparent 0);
   background-image: linear-gradient(180deg,#d9d9d9,#d9d9d9 50%,transparent 0);
   background-size: calc(100% - 60rpx) 2px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-origin: content-box;
+}
+.btn-box image {
+  width: 88rpx;
+  height: 88rpx;
+  margin: 0 30rpx 0 0;
+}
+.content-box {
+  padding: 30rpx 30rpx 0;
+  line-height: 1.42;
+}
+.content-box text {
+  font-size: 32rpx;
+  color: #999;
 }
